<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    LEFT   -->
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".45">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventDescriptionLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventMenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventMenuLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventPromotionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventPromotionsLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventInfosLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/eventInfosLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventOrganizerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventOrganizerLabel" />

        </LinearLayout>

    </LinearLayout>


    <!--    RIGHT   -->
    <LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight=".15"
    android:weightSum="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:layout_height="match_parent">

            <ExpandableListView
                android:id="@+id/expandableListViewEventMenu"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventPromotions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventInfos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventOrganizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>