<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    LEFT   -->
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".45">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organizerType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organizerMenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organizerMenuLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organizerPromotionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organizerPromotionsLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organizerEventsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organizerEventsLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organizerContactLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organizerContactLabel" />

        </LinearLayout>

    </LinearLayout>


    <!--    RIGHT   -->
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".15"
        android:weightSum="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organizerDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:layout_height="match_parent">

            <ExpandableListView
                android:id="@+id/expandableListViewEventMenu"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organizerPromotions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.05"
            android:gravity="center"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/organizerEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/organizerContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>